# musical-memory

./: README.md
backend/: .env  Dockerfile  alembic.ini  fly.toml  init_db.py  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 94fbf0947a42_initial_schema.py  add_interview_feedback_and_project_stages.py
backend/app/: database.py  llm.py  main.py  models.py  notifications.py  schemas.py
frontend/: .env  .env.production  .env.test  .eslintrc.json  Dockerfile  fly.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/ui/: analytics-dashboard.tsx  button.tsx  candidate-form.tsx  candidate-list.tsx  command.tsx  data-table.tsx  interview-feedback.tsx  interview-scheduler.tsx  navigation-items.tsx  onboarding-management.tsx  project-detail.tsx  project-form.tsx  project-list.tsx  project-timeline.tsx  resume-preview.tsx  resume-upload.tsx  sidebar.tsx  table.tsx  use-toast.tsx
frontend/src/hooks/: use-mobile.ts  use-toast.ts
frontend/src/lib/: api.ts  types.ts
